--- a/package.json
+++ b/package.json
@@ -7,16 +7,18 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "native-base": "^2.12.1",
     "react": "16.8.3",
     "react-native": "0.59.9",
+    "react-native-android-location-services-dialog-box": "^2.8.1",
+    "react-native-elements": "^1.1.0",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-maps": "^0.24.2",
-    "react-native-vector-icons": "^6.5.0",
+    "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^3.11.0",
     "react-redux": "^7.1.0",
     "redux": "^4.0.1",
-    "redux-saga": "^1.0.3",
     "redux-thunk": "^2.3.0",
     "styled-components": "^4.3.2"
   },
