--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "axios": "^0.19.0",
     "native-base": "^2.12.1",
     "react": "16.8.3",
+    "react-dom": "^16.8.6",
     "react-native": "0.59.9",
     "react-native-android-location-services-dialog-box": "^2.8.1",
     "react-native-elements": "^1.1.0",
     "react-native-gesture-handler": "^1.3.0",
-    "react-native-push-notification": "^3.1.3",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^3.11.0",
     "react-redux": "^7.1.0",
