--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.5.0",
     "axios": "^0.19.0",
     "native-base": "^2.12.1",
     "react": "16.8.3",
@@ -14,6 +15,7 @@
     "react-native": "0.59.9",
     "react-native-android-location-services-dialog-box": "^2.8.1",
     "react-native-elements": "^1.1.0",
+    "react-native-firebase": "^5.5.4",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^3.11.0",
