--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "react": "16.8.3",
     "react-dom": "^16.8.6",
     "react-native": "0.59.9",
+    "react-native-action-button": "^2.8.5",
     "react-native-android-location-services-dialog-box": "^2.8.1",
     "react-native-dropdownalert": "^4.1.0",
-    "react-native-elements": "^1.1.0",
     "react-native-firebase": "^5.5.4",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-vector-icons": "^6.6.0",
