--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -151,7 +151,7 @@ dependencies {
     implementation "com.google.firebase:firebase-core:15.0.2"
     implementation "com.google.firebase:firebase-messaging:15.0.2"
 
-    compile(project(':react-native-firebase')) {   
+    implementation(project(':react-native-firebase')) {   
        transitive = false
     }
 }
