--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -138,9 +138,7 @@ android {
 }
 
 dependencies {
-    implementation(project(':react-native-geolocation-service')) {
-        exclude group: 'com.google.android.gms', module: 'play-services-location'
-    }
+    implementation project(':@react-native-community_geolocation')
     implementation project(':@react-native-community_async-storage')
     implementation project(':react-native-firebase')
     implementation project(':react-native-android-location-services-dialog-box')
