--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.5.0",
+    "@react-native-community/geolocation": "^1.4.2",
     "axios": "^0.19.0",
+    "immutable": "^4.0.0-rc.12",
     "native-base": "^2.12.1",
     "react": "16.8.3",
     "react-dom": "^16.8.6",
