--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -105,15 +105,15 @@ android {
         applicationId "com.driverihtgo"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 1
-        versionName "1.0"
+        versionCode 5
+        versionName "1.3.0"
     }
     splits {
         abi {
             reset()
             enable enableSeparateBuildPerCPUArchitecture
             universalApk false  // If true, also generate a universal APK
-            include "arm64-v8a", "x86_64", "x86"
+            include "arm64-v8a", "armeabi-v7a", "x86_64", "x86"
         }
     }
     buildTypes {
@@ -138,20 +138,20 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-android-location-enabler')
     implementation project(':@react-native-community_geolocation')
     implementation project(':@react-native-community_async-storage')
     implementation project(':react-native-firebase')
-    implementation project(':react-native-android-location-services-dialog-box')
     implementation project(':react-native-vector-icons')
     implementation project(':react-native-gesture-handler')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
     implementation "com.facebook.react:react-native:+"  // From node_modules
 
-    implementation "com.google.android.gms:play-services-base:15.0.0"
+    implementation "com.google.android.gms:play-services-base:15.0.2"
     implementation "com.google.android.gms:play-services-location:15.0.0"
-    implementation "com.google.firebase:firebase-core:15.0.2"
-    implementation "com.google.firebase:firebase-messaging:15.0.2"
+    implementation "com.google.firebase:firebase-core:16.0.1"
+    implementation "com.google.firebase:firebase-messaging:17.4.0"
 
     implementation(project(':react-native-firebase')) {   
        transitive = false
@@ -164,4 +164,5 @@ task copyDownloadableDepsToLibs(type: Copy) {
     from configurations.compile
     into 'libs'
 }
+com.google.gms.googleservices.GoogleServicesPlugin.config.disableVersionCheck = false
 apply plugin: 'com.google.gms.google-services'
