--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
     "@react-native-community/async-storage": "^1.5.0",
     "@react-native-community/geolocation": "^1.4.2",
     "axios": "^0.19.0",
-    "native-base": "^2.12.1",
+    "native-base": "2.12.1",
     "react": "16.8.3",
     "react-dom": "^16.8.6",
     "react-native": "0.59.9",
     "react-native-action-button": "^2.8.5",
-    "react-native-android-location-services-dialog-box": "^2.8.1",
+    "react-native-android-location-enabler": "^1.1.0",
     "react-native-dropdownalert": "^4.1.0",
     "react-native-firebase": "^5.5.4",
     "react-native-gesture-handler": "^1.3.0",
