--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -138,6 +138,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-device-info')
     implementation project(':react-native-android-location-enabler')
     implementation project(':@react-native-community_geolocation')
     implementation project(':@react-native-community_async-storage')
