--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native": "0.59.9",
     "react-native-action-button": "^2.8.5",
     "react-native-android-location-enabler": "^1.1.0",
+    "react-native-device-info": "^2.3.2",
     "react-native-dropdownalert": "^4.1.0",
     "react-native-firebase": "^5.5.4",
     "react-native-gesture-handler": "^1.3.0",
