--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -32,6 +32,8 @@
     </intent-filter>
   </service>
    <service android:name="io.invertase.firebase.messaging.RNFirebaseBackgroundMessagingService" />
+   <meta-data android:name="google_analytics_adid_collection_enabled" android:value="false" />
+   <meta-data android:name="google_analytics_ssaid_collection_enabled" android:value="false" />
     </application>
 
 </manifest>
