--- a/package.json
+++ b/package.json
@@ -16,10 +16,14 @@
     "react-native": "0.59.9",
     "react-native-action-button": "^2.8.5",
     "react-native-android-location-enabler": "^1.1.0",
+    "react-native-camera": "^3.7.2",
     "react-native-device-info": "^2.3.2",
     "react-native-dropdownalert": "^4.1.0",
     "react-native-firebase": "^5.5.4",
     "react-native-gesture-handler": "^1.3.0",
+    "react-native-image-crop-picker": "^0.26.1",
+    "react-native-permissions": "^2.0.2",
+    "react-native-qrcode-scanner-view": "^2.0.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^3.11.0",
     "react-redux": "^7.1.0",
