--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -18,3 +18,4 @@
 # org.gradle.parallel=true
 android.useAndroidX=true
 android.enableJetifier=true
+org.gradle.jvmargs=-XX\:MaxHeapSize\=1024m -Xmx1024m
