--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-native-firebase": "^5.5.4",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-image-crop-picker": "^0.26.1",
+    "react-native-modal": "^11.4.0",
+    "react-native-modalbox": "^2.0.0",
     "react-native-permissions": "^2.0.2",
     "react-native-qrcode-scanner-view": "^2.0.0",
     "react-native-vector-icons": "^6.6.0",
